maquette integration wip

--- a/01_maquette_integration/a_propos.html
+++ b/01_maquette_integration/a_propos.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Maquette Accueil">
     <meta name="author" content="Fabien Pottier">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <!-- <link rel="stylesheet" href="assets/css/maquette_Accueil.css"> -->
+    <link rel="stylesheet" href="assets/css/a_propos.css">
     <title>A propos</title>
 </head>
 <body>
@@ -14,8 +14,61 @@
     <nav>
         <a href="maquette_Accueil.html"><img src="assets/img/s1b1.jpeg" alt="logo du site" id="logoNav"></a>
         <div>
-            <a href="maquette_contact.html">Accueil</a>
-            <a href="maquette_a_propos.html">A propos</a>
-            <a href="maquette_contact.html">Contact</a>
+            <a href="index.html">Accueil</a>
+            <a href="a_propos.html">A propos</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
+
+    <main>
+        <section class="section1">
+            <div>
+                <h2>On se présente</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, necessitatibus. Ex architecto, id autem iusto totam, quasi sed a est dolorum rem sint fugiat velit dicta, officia doloremque beatae ratione!
+                Ducimus, in iure dolor officia, sit tempora obcaecati eius eos soluta porro vero qui, voluptates animi accusamus explicabo. Deleniti voluptate dicta aspernatur alias illo ea quibusdam non explicabo et qui.</p>
+            </div>
+        </section>
+        <section class="section2">
+            <div>
+                <h2>Notre équipe</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cupiditate eos ex doloremque. Ducimus sed nam unde repudiandae aperiam ex optio explicabo consequatur, quibusdam perspiciatis quo est illo excepturi dicta?</p>
+            </div>
+            <div>
+                <h2>Nos experiences</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cupiditate eos ex doloremque. Ducimus sed nam unde repudiandae aperiam ex optio explicabo consequatur, quibusdam perspiciatis quo est illo excepturi dicta?</p>
+            </div>
+            <div>
+                <h2>Notre objectif</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cupiditate eos ex doloremque. Ducimus sed nam unde repudiandae aperiam ex optio explicabo consequatur, quibusdam perspiciatis quo est illo excepturi dicta?</p>
+            </div>
+        </section>       
+        <section class="section3">
+            <div>
+                <h3>Nos réalisation</h3>
+                <img src="" alt="Main d'un robot">
+                <img src="" alt="image d'un composant informatique">
+                <img src="" alt="image d'un ordinateur avec des lignes de codes sur l'écran">
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+    </footer>
