--- a/01_maquette_integration/contact.html
+++ b/01_maquette_integration/contact.html
@@ -1,21 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=5, initial-scale=1.0">
     <meta name="description" content="Maquette Accueil">
     <meta name="author" content="Fabien Pottier">
     <link rel="stylesheet" href="assets/css/reset.css">
-    <!-- <link rel="stylesheet" href="assets/css/maquette_Accueil.css"> -->
+    <link rel="stylesheet" href="assets/css/contact.css">
     <title>Contact</title>
 </head>
 <body>
     
     <nav>
-        <img src="assets/img/" alt="">
+        <a href="maquette_Accueil.html"><img src="assets/img/s1b1.jpeg" alt="logo du site" id="logoNav"></a>
         <div>
-            <a href="maquette_contact.html">Accueil</a>
-            <a href="maquette_a_propos.html">A propos</a>
-            <a href="maquette_contact.html">Contact</a>
+            <a href="index.html">Accueil</a>
+            <a href="a_propos.html">A propos</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
+
+    <main>
+        <section class="section1">
+            <h1>Laisser nous un message</h1>
+            <p>Utiliser le formulaire de contact pour nous transmettre un message, nous vous répondrons dans les plus brefs délais.</p>
+        </section>
+        <div class="section2">
+            <div>
+                <label for="email">E-mail</label>
+                <input type="email" name="email" id="email" required>
+            </div>
+            <div>
+                <label for="sujet">Sujet</label>
+                <br>
+                <textarea name="sujet" id="sujet" cols="30" rows="1"></textarea>
+            </div>
+            <div>
+                <label for="commentaire">Votre message</label>
+                <br>
+                <textarea name="commentaire" id="commentaire" cols="30" rows="10"></textarea>
+            </div>
+        </div>
+        
+    </main>
+
+
+    <footer>
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+
+        <div>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+            <a href="#">Lien</a>
+        </div>
+    </footer>
