--- a/01_maquette_integration/index.html
+++ b/01_maquette_integration/index.html
@@ -19,17 +19,17 @@
     <nav>
         <a href="maquette_Accueil.html"><img src="assets/img/s1b1.jpeg" alt="logo du site" id="logoNav"></a>
         <div>
-            <a href="maquette_contact.html">Accueil</a>
-            <a href="maquette_a_propos.html">A propos</a>
-            <a href="maquette_contact.html">Contact</a>
+            <a href="index.html">Accueil</a>
+            <a href="a_propos.html">A propos</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
 
     <header>
         <div>
-            <a href="maquette_contact.html">Accueil</a>
-            <a href="maquette_a_propos.html">A propos</a>
-            <a href="maquette_contact.html">Contact</a>
+            <a href="index.html">Accueil</a>
+            <a href="a_propos.html">A propos</a>
+            <a href="contact.html">Contact</a>
         </div>
 
     </header>
