--- a/03_maquette_one-million/index.html
+++ b/03_maquette_one-million/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <header>
-        <nav class="navbar navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-dark bg-dark fixed-top ">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="assets/images/top-logo.png" alt="logo du site one million"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
@@ -30,20 +30,12 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Who we are</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Get Involved
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                      <li><a class="dropdown-item" href="#">Who we are</a></li>
-                      <li><a class="dropdown-item" href="#">Get Involved</a></li>
-                      <li>
-                        <hr class="dropdown-divider">
-                      </li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
                   </li>
                 </ul>
                 <form class="d-flex mt-3" role="search">
@@ -56,9 +48,10 @@
         </nav>
       </header>
       <main>
-          <section id="section1" class="p-5 text-center mb-5">
+        <!-- Section n°1 : avec le principale objectif -->
+          <section id="section1" class="col-sm-12 p-5 text-center my-5">
             <div>
-              <p>Our goal is to inspire Tallahassee to write 1,000,000 lines of code_</p>
+              <h1>Our goal is to inspire Tallahassee to write 1,000,000 lines of code_</h1>
             </div>
             <div>
               <p>
@@ -70,51 +63,49 @@
               <img src="assets/images/code.png" alt="">
             </div>
           </section>
-
-          <section id="section2" class="column">
+          <!-- Section n°2 : présentation de l'académy -->
+          <section id="section2" class="column mb-5">
             <div class="text-center">
               <img src="assets/images/academy-brand-med.png" alt="logo de l'academy med">
-              <h2>Who we are</h2>
-              <p>We are<span>Massive Academy</span>. We aim to improve education through both methods -effective project-based learning - and material - by teaching skills that are applicate to improving your life today.</p>
+              <h2 class="mt-5">Who we are</h2>
+              <p class="p-3">We are<span>Massive Academy</span>. We aim to improve education through both methods -effective project-based learning - and material - by teaching skills that are applicate to improving your life today.</p>
             </div>
-            <div>
           </section>
-            <section id="section3" class="bg-light text-center">
+          <!-- Section n°3 : Icon et bouton -->
+          <section id="section3" class="bg-light text-center py-3 row">
               <h2>Get involved</h2>
-
-                <div class="m-5">
-                  <i class="bi bi-person-fill"></i>
+                <div class="m-5 col-sm-12 col-lg-3">
+                  <i class="bi bi-person-fill icon-link"></i>
                   <h3>Students</h3>
                   <p>
                     Want to learn how to code ? Want to help us get to 1,000,000 lines ? Click the button below and we'll let you know how to get involved.
                   </p>
-                  <button class="">Start Learning >></button>
+                  <button class="mt-4">Start Learning >></button>
                 </div>
 
-                <div class="m-5">
-                  <i class="bi bi-pencil-fill "></i>
+                <div class="m-5 col-sm-12 col-lg-3">
+                  <i class="bi bi-pencil-fill icon-link"></i>
                   <h3>Educators</h3>
                   <p>
                     Want to bring this initiative to your school or instittution ? Awesome ! Click the button below and we'll make it happen.
                   </p>
-                  <button>Join The Initiative >></button>
+                  <button class="mt-5">Join The Initiative >></button>
                 </div>
 
-                <div class="m-5">
+                <div class="m-5 col-sm-12 col-lg-3">
                   <i class="bi bi-cash icon-link"></i>
                   <h3>Sponsors</h3>
                   <p>
                     We love all the support we get to help host events and empower lives with coding knowledge. Click to get involved.
                   </p>
-                  <button>Give Support >></button>
+                  <button class="mt-5">Give Support >></button>
                 </div>
-              </section>
-            </div>
+          </section>
       </main>    
       <footer>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-danger">
           <div class="container-md">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand pt-5" href="#"><img src="assets/images/one-million-bottom-brand.png" alt="image du footer" class="ms-5 mt-5"></a>
           </div>
         </nav>  
      </footer>
