--- a/Site-fylo/index.html
+++ b/Site-fylo/index.html
@@ -28,8 +28,8 @@
     <body>
         <header>
             <!-- navbar  -->
-            <nav class="navbar navbar-expand-lg p-5">
-                <img src="assets/img/logo.svg" alt="logo du site Fylo"> <!-- Logo du site -->
+            <nav class="navbar navbar-expand-lg p-5 col-sm-12 ">
+                <img src="assets/img/logo.svg" alt="logo du site Fylo" class="logo"> <!-- Logo du site -->
                 <div class="container-fluid">
                   <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
                     <!-- Lien de ma navbar -->
@@ -43,14 +43,14 @@
             </nav>
         </header>
         <main>
-            <div class="container"> <!-- Div avec la classe container de mon main -->
+            <div class="container col-12 "> <!-- Div avec la classe container de mon main -->
                 <!-- 1ère Section de ma page -->
                 <section class="section1 p-5 row "> 
                     <div class="col-6  ">
                         <h2 class="titreSection1">All your files in one secure location, accessible anywhere</h2>
                         <p>Fylo stores you most important files in one secure location. Access them wherever you nees, share and collaborate with friends, family, and co-workers.
                         </p>
-                        <div class="container-fluid w-50px">
+                        <div class="container-fluid">
                             <div class="col-6">
                                 <form class="d-flex" role="mail">
                                   <input class="form-control me-2 col-6 " type="mail" placeholder="Enter your email" aria-label="mail">
@@ -60,41 +60,49 @@
                         </div>
                     </div>
                     <div class="col-6 ">
-                        <img src="assets/img/illustration-1.svg" alt="illustration n°1 de la page">
+                        <img src="assets/img/illustration-1.svg" alt="illustration n°1 de la page" class="illustration">
                     </div>
                 </section>
                 <!-- Div contenant la courbe de ma section 2 -->
-                <div class="pt-5 ">
+                <div class="pt-5 col-12">
                     <img src="assets/img/bg-curve-desktop.svg" alt="curve de la section 2" class="col-12">
                 </div>
                 <!-- 2ème Section de ma page -->
                 <section class="section2 p-5 row ">
                     <div class="col-6">
-                        <h2 class="titreSection2">Stay productive, wherever you are</h2>
-                        <p>
-                            Never let location be an issue when accessiong your files. Fylo has you covered for all of file strorage needs.
-                        </p>
-                        <p>
-                            Securely share files and folders with friends, family and colleagues for live collaboration. No email attachements required!
-                        </p>
-                        <a href="#">See how Fylo works <i><img src="assets/img/icon-arrow.svg" alt="icon de flèche" class="w-25"></i></a>
+                        <div>
+                            <h2 class="titreSection2">Stay productive, wherever you are</h2>
+                            <p>
+                                Never let location be an issue when accessiong your files. Fylo has you covered for all of file strorage needs.
+                            </p>
+                            <p>
+                                Securely share files and folders with friends, family and colleagues for live collaboration. No email attachements required!
+                            </p>
+                        </div>
+                        <div class="mb-5 ">
+                            <a href="#">See how Fylo works <img src="assets/img/icon-arrow.svg" alt="icon de flèche" class="icon-link "></a>
+                        </div>
                         <!-- Article de mon main -->
-                        <article class="col-6 p-5">
-                            <i><img src="assets/img/icon-quotes.svg" alt="icon de quotes" class="w-25"></i>
+                        <article class="col-8 p-5">
+                            <i><img src="assets/img/icon-quotes.svg" alt="icon de quotes"></i>
                             <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has becom a well-oiled collaboration machine.</p>
-                            <img src="assets/img/avatar-testimonial.jpg" alt="photo de profile utilisateur" class="w-25 rounded-circle col-5 ">
-                            <p class="col-5 "><strong>Kyle Burton</strong><br>Founder & CEO, Huddle</p>
+                            <div class="row">
+                                <img src="assets/img/avatar-testimonial.jpg" alt="photo de profile utilisateur" class="profilPicture">
+                                <p class="col-8"><strong>Kyle Burton</strong><br>Founder & CEO, Huddle</p>
+                            </div>
                         </article>
                     </div>
-                    <div class="col-5 ">
-                        <img src="assets/img/illustration-2.svg" alt="illustration n°2 de la page">
+                    <div class="col-5">
+                        <img src="assets/img/illustration-2.svg" alt="illustration n°2 de la page" class="illustration">
                     </div>
                 </section>
             </div>
-
-
         </main>
-        <footer>
+
+
+
+
+        <footer class="footer1">
             <!-- place footer here -->
             <div class="row align-items-center p-5 ">
                 <div class="col-6 ">
@@ -102,22 +110,50 @@
                     <p>it only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.
                     </p>
                 </div>
-                <div class="col-6">
+                <div class="col-6 px-5">
                     <form role="mail">
                       <input class="form-control me-2 col-12 mb-2 " type="mail" placeholder="Enter your email" aria-label="mail">
                       <button class="btn btn-outline-success bg-primary col-4 " type="submit">Get Started</button>
                     </form>
                 </div>
-
             </div>
-
         </footer>
+
+
+
+
+        <footer class="footer2">
+            <div class="row p-5 ">
+                <ul class="col-3">
+                    <li><img src="assets/img/logo_w.svg" alt="logo du site en blanc" class="py-3 logo"></li>
+                    <li>Phone: +1-543-123-4567</li>
+                    <li>example@fylo.com</li>
+                </ul>
+                <ul class="col-3">
+                    <li>About us</li>
+                    <li>Jobs</li>
+                    <li>Press</li>
+                    <li>Blog</li>
+                </ul>
+                <ul class="col-3">
+                    <li>Contact Us</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+                <div class="col-3 justify-content-between">
+                        <i class="bi bi-facebook"></i>
+                        <i class="bi bi-twitter"></i>
+                        <i class="bi bi-instagram"></i>
+                </div>
+            </div>
+        </footer>
+
         <!-- Bootstrap JavaScript Libraries -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
 
         </script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
 
         </script>
     </body>
